tests/snapshots/examples_fixtures/type_classes__FoldableRowPolyExample__Flow__Foldable.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/FoldableRowPolyExample/Flow/Foldable.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `FoldableRowPolyExample.Flow.Foldable` doesn't match file path `examples/type_classes/FoldableRowPolyExample/Flow/Foldable.flx`.

  examples/type_classes/FoldableRowPolyExample/Flow/Foldable.flx:1:1
  |
1 | module FoldableRowPolyExample.Flow.Foldable {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
